# FileManager

./: .gitignore  CMakeLists.txt  main.cpp
include/: filemanager.h
res/: res.qrc
src/: filemanager.cpp
ui/: filemanager.ui
